--- a/FirstFrameworkDesign/pom.xml
+++ b/FirstFrameworkDesign/pom.xml
@@ -4,7 +4,36 @@
   <groupId>in.flickerin</groupId>
   <artifactId>FirstFrameworkDesign</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-
+	
+	<build>
+        <!-- Source directory configuration -->
+        <plugins>
+            <!-- Following plugin executes the testng tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14.1</version>
+                <configuration>
+                    <!-- Suite testng xml file to consider for test execution -->
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+            <!-- Compiler plugin configures the java version to be usedfor compiling 
+                the code -->
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+	
+	
+	
 	<dependencies>   
 		
 		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
