--- a/FirstFrameworkDesign/pom.xml
+++ b/FirstFrameworkDesign/pom.xml
@@ -5,6 +5,12 @@
   <artifactId>FirstFrameworkDesign</artifactId>
   <version>0.0.1-SNAPSHOT</version>  
 	
+	<properties>
+        <project.java.version>1.8</project.java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+    
 	<build>
         <!-- Source directory configuration -->
         <plugins>
@@ -113,7 +119,7 @@
 		
 	</dependencies> 
 	
-	<repositories>
+	<!-- repositories>
         <repository>
             <id>myMavenRepo.read</id>
             <url>https://mymavenrepo.com/repo/i1cOFtytYDOnrJpqjPob/</url>
@@ -125,7 +131,7 @@
             <id>myMavenRepo.write</id>
             <url>https://mymavenrepo.com/repo/7lHgpiqstwz9PXAzlpxB/</url>
         </repository>
-    </distributionManagement>
+    </distributionManagement-->
   
 </project>
 
