--- a/FirstFrameworkDesign/pom.xml
+++ b/FirstFrameworkDesign/pom.xml
@@ -16,7 +16,7 @@
 	<build>
         <!-- Source directory configuration -->
         <plugins>
-            <!-- Following plugin executes the testng tests -->
+            <!-- Following plugin executes the testng tests test ram 123 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
