--- a/FirstFrameworkDesign/pom.xml
+++ b/FirstFrameworkDesign/pom.xml
@@ -11,6 +11,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding> 
         <maven.compiler.source>3.1</maven.compiler.source>
  		<maven.compiler.target>3.1</maven.compiler.target>
+ 		<maven-compiler-plugin-version>3.1</maven-compiler-plugin-version>
     </properties>
      
 	<build>
